CPack fixes and cleanups.

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -4,32 +4,66 @@ include_directories(
   ${PROJECT_BINARY_DIR}
 )
 
-add_executable( FiReSProperties properties.cpp )
-target_link_libraries( FiReSProperties FiReS )
+set( FIRESPROPERTIES_HEADERS )
+set( FIRESPROPERTIES_SOURCES properties.cpp )
+set( FIRESPROPERTIES_LINK_LIBRARIES FiReS )
+common_application( FiReSProperties )
+list( APPEND FIRES_EXAMPLES_FILES ${FIRESPROPERTIES_SOURCES} )
 
-add_executable( FiReSSearchScalar searchScalar.cpp )
-target_link_libraries( FiReSSearchScalar FiReS )
+set( FIRESSEARCHSCALAR_HEADERS )
+set( FIRESSEARCHSCALAR_SOURCES searchScalar.cpp )
+set( FIRESSEARCHSCALAR_LINK_LIBRARIES FiReS )
+common_application( FiReSSearchScalar )
+list( APPEND FIRES_EXAMPLES_FILES ${FIRESSEARCHSCALAR_SOURCES} )
 
-add_executable( FiReSSearchLargeNumberOfObjects searchLargeNumberOfObjects.cpp)
-target_link_libraries( FiReSSearchLargeNumberOfObjects FiReS)
+set( FIRESSEARCHLARGENUMBEROFOBJECTS_HEADERS )
+set( FIRESSEARCHLARGENUMBEROFOBJECTS_SOURCES searchLargeNumberOfObjects.cpp )
+set( FIRESSEARCHLARGENUMBEROFOBJECTS_LINK_LIBRARIES FiReS )
+common_application( FiReSSearchLargeNumberOfObjects )
+list( APPEND FIRES_EXAMPLES_FILES ${FIRESSEARCHLARGENUMBEROFOBJECTS_SOURCES} )
 
-add_executable( FiReSFilter filter.cpp )
-target_link_libraries( FiReSFilter FiReS )
+set( FIRESFILTER_HEADERS )
+set( FIRESFILTER_SOURCES filter.cpp )
+set( FIRESFILTER_LINK_LIBRARIES FiReS )
+common_application( FiReSFilter )
+list( APPEND FIRES_EXAMPLES_FILES ${FIRESFILTER_SOURCES} )
 
-add_executable( FiReSSort sort.cpp )
-target_link_libraries( FiReSSort FiReS )
+set( FIRESSORT_HEADERS )
+set( FIRESSORT_SOURCES sort.cpp )
+set( FIRESSORT_LINK_LIBRARIES FiReS )
+common_application( FiReSSort )
+list( APPEND FIRES_EXAMPLES_FILES ${FIRESSORT_SOURCES} )
 
-add_executable( FiReSAggregate aggregate.cpp )
-target_link_libraries( FiReSAggregate FiReS )
+set( FIRESAGGREGATE_HEADERS )
+set( FIRESAGGREGATE_SOURCES aggregate.cpp )
+set( FIRESAGGREGATE_LINK_LIBRARIES FiReS )
+common_application( FiReSAggregate )
+list( APPEND FIRES_EXAMPLES_FILES ${FIRESAGGREGATE_SOURCES} )
 
-add_executable( FiReSTasks tasks.cpp )
-target_link_libraries( FiReSTasks FiReS )
+set( FIRESTASKS_HEADERS )
+set( FIRESTASKS_SOURCES tasks.cpp )
+set( FIRESTASKS_LINK_LIBRARIES FiReS )
+common_application( FiReSTasks )
+list( APPEND FIRES_EXAMPLES_FILES ${FIRESTASKS_SOURCES} )
 
-add_executable( FiReSObserver observer.cpp )
-target_link_libraries( FiReSObserver FiReS )
+set( FIRESOBSERVER_HEADERS )
+set( FIRESOBSERVER_SOURCES observer.cpp )
+set( FIRESOBSERVER_LINK_LIBRARIES FiReS )
+common_application( FiReSObserver )
+list( APPEND FIRES_EXAMPLES_FILES ${FIRESOBSERVER_SOURCES} )
 
-add_executable( FiReSDependencies dependencies.cpp )
-target_link_libraries( FiReSDependencies FiReS )
+set( FIRESDEPENDENCIES_HEADERS )
+set( FIRESDEPENDENCIES_SOURCES dependencies.cpp )
+set( FIRESDEPENDENCIES_LINK_LIBRARIES FiReS )
+common_application( FiReSDependencies )
+list( APPEND FIRES_EXAMPLES_FILES ${FIRESDEPENDENCIES_SOURCES} )
 
-add_executable( FiReSCaster caster.cpp )
-target_link_libraries( FiReSCaster FiReS )
+set( FIRESCASTER_HEADERS )
+set( FIRESCASTER_SOURCES caster.cpp )
+set( FIRESCASTER_LINK_LIBRARIES FiReS )
+common_application( FiReSCaster )
+list( APPEND FIRES_EXAMPLES_FILES ${FIRESCASTER_SOURCES} )
+
+include(InstallFiles)
+install_files(share/fires/examples FILES ${FIRES_EXAMPLES_FILES} COMPONENT
+  examples )
