--- a/.travis.yml
+++ b/.travis.yml
@@ -19,4 +19,4 @@ script:
   - mkdir $BUILD_TYPE
   - cd $BUILD_TYPE
   - cmake -GNinja -DCLONE_SUBPROJECTS=ON -DCMAKE_INSTALL_PREFIX=$PWD/install -DCMAKE_BUILD_TYPE=$BUILD_TYPE ..
-  - ninja all && ninja $PROJECT_NAME-tests && ninja smoketests
+  - ninja all && ninja $PROJECT_NAME-tests
