Fires object serialization using properties types

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -40,6 +40,12 @@ set( FIRESAGGREGATE_LINK_LIBRARIES FiReS )
 common_application( FiReSAggregate )
 list( APPEND FIRES_EXAMPLES_FILES ${FIRESAGGREGATE_SOURCES} )
 
+set( FIRESSERIALIZE_HEADERS )
+set( FIRESSERIALIZE_SOURCES serialize.cpp )
+set( FIRESSERIALIZE_LINK_LIBRARIES FiReS )
+common_application( FiReSSerialize )
+list( APPEND FIRES_EXAMPLES_FILES ${FIRESAGGREGATE_SOURCES} )
+
 set( FIRESTASKS_HEADERS )
 set( FIRESTASKS_SOURCES tasks.cpp )
 set( FIRESTASKS_LINK_LIBRARIES FiReS )
