--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -24,8 +24,8 @@ Ubuntu-master:
   - uname -a
   - export COVERAGE=ON
   - export CMAKE_EXTRA_TARGETS="FiReS-tests doxygen"
-  - export DEPLOY_DOC_REPO="git@github.com:gmrvvis/gmrvvis.github.io"
-  - export GITHUB_MIRROR_URL="git@github.com:gmrvvis/FiReS"
+  - export DEPLOY_DOC_REPO="git@github.com:vg-lab/vg-lab.github.io"
+  - export GITHUB_MIRROR_URL="git@github.com:vg-lab/FiReS"
   - export BUILD_GENERATOR="Ninja"
   - bash .gitlabci.sh
  only:
